--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,8 @@ readme = "README.md"
 [tool.poetry.dependencies]
 python = "^3.11"
 langchain = "^0.1.20"
+fastapi = "^0.111.0"
+langchain-groq = "^0.1.4"
 
 
 [build-system]
