--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ langchain-groq = "^0.1.4"
 pandas = "^2.2.2"
 duckdb = "^0.10.3"
 matplotlib = "^3.9.0"
+sentence-transformers = "^3.0.1"
 
 
 [build-system]
