--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ pandas = "^2.2.2"
 duckdb = "^0.10.3"
 matplotlib = "^3.9.0"
 sentence-transformers = "^3.0.1"
+pymupdf = "^1.24.5"
 
 
 [build-system]
